--- a/.classpath
+++ b/.classpath
@@ -4,6 +4,8 @@
 	<classpathentry kind="src" path="gen"/>
 	<classpathentry kind="con" path="com.android.ide.eclipse.adt.ANDROID_FRAMEWORK"/>
 	<classpathentry kind="con" path="com.android.ide.eclipse.adt.LIBRARIES"/>
-	<classpathentry kind="lib" path="libs/ksoap2-android.jar"/>
+	<classpathentry kind="lib" path="libs/itraffApi_v1.jar"/>
+	<classpathentry kind="lib" path="libs/zxing-core.jar"/>
+	<classpathentry combineaccessrules="false" kind="src" path="/ItraffApi"/>
 	<classpathentry kind="output" path="bin/classes"/>
 </classpath>
