--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -7,7 +7,14 @@
     <uses-sdk
         android:minSdkVersion="10"
         android:targetSdkVersion="16" />
-
+    
+    <uses-permission android:name="android.permission.CAMERA" />
+    <uses-feature android:name="android.hardware.camera" />
+    <uses-feature android:name="android.hardware.camera.autofocus" />
+    
+    <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
+    
     <application
         android:allowBackup="true"
         android:icon="@drawable/ic_launcher"
