--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -16,7 +16,7 @@
 
     <uses-feature android:name="android.hardware.camera" />
     <uses-feature android:name="android.hardware.camera.autofocus" />
-    <uses-feature android:name="android.hardware.camera.flash" />
+    <!--<uses-feature android:name="android.hardware.camera.flash" />-->
     <uses-feature android:name="android.hardware.camera.front" />
     <uses-feature android:name="android.hardware.screen.portrait" />
 
@@ -27,6 +27,7 @@
         android:theme="@style/AppTheme" >
         <activity
             android:name="com.tooploox.blackberryjam.activities.StartActivity"
+            android:screenOrientation="portrait"
             android:label="@string/app_name" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
