--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -26,7 +26,7 @@
         android:label="@string/app_name"
         android:theme="@style/AppTheme" >
 
-        <activity android:name=".SplashScreen"
+        <activity android:name=".activities.SplashScreen"
                   android:label="@string/app_name"
 				  android:screenOrientation="portrait">
             <intent-filter>
